# SmartCamera

./: README.md
Documentation/: Guida Installazione OpenCV + MinGW + CodeBlocks Windows X64.docx  README_Albertazzi.txt  README_Bonfiglioli.txt  board_preparation.md
HLS_COMMON/LF_VALID_TO_AXIS/: .vivado_hls_log_all.xml  LF_valid_to_AXIS.cpp  LF_valid_to_AXIS.h
HLS_COMMON/OV7670_GRAYSCALE/: .cproject  .vivado_hls_log_all.xml  ov7670_grayscale.cpp  ov7670_grayscale.h  testbench.cpp
HLS_COMMON/OV7670_INTERFACE/: .project  .vivado_hls_log_all.xml  ov7670_interface.cpp  ov7670_interface.h  test_ov7670_interface.cpp
HLS_COMMON/OV7670_LUMA_CHROMA/: .vivado_hls_log_all.xml  ov7670_LUMA_CHROMA.h  testbench.cpp
HLS_COMMON/VIDEO_STREAM_MUX/: mux_sd_ov.h  vivado_hls.app
HLS_SOURCE_CODE_COMMON/: README.txt
HLS_SOURCE_CODE_COMMON/LF_VALID_TO_AXIS/: .cproject  .project  testbench.cpp  vivado_hls.app
HLS_SOURCE_CODE_COMMON/VIDEO_STREAM_MUX/: .cproject  .project  mux_sd_ov.cpp
OV7670_Color/OS/: os.h
OV7670_Color/client_udp/: Calibration_single_camera.cpp  Calibration_single_camera.h  OV7670.cpp  OV7670.h  TestOpenCV.cbp  TestOpenCV.cscope_file_list  TestOpenCV.depend  TestOpenCV.layout  main.cpp
OV7670_Color/lib_pose_estimation/: ReadMe.txt  dllmain.cpp  (+7 more)
OVLinux/: CMakeLists.txt
OVLinux/src/common/include/: axis_to_ddr_writer.h  ddr_to_axis_reader.h  gpio_intr.h  platform_config.h  utils.h
OVLinux/src/common/src/: axis_to_ddr_writer.cpp  ddr_to_axis_reader.cpp  gpio_intr.cpp
OVLinux/src/daemon/: ov7670.service
OVLinux/src/daemon/src/: Start.cpp  Stop.cpp
OVLinux/src/drivers/src/axis_to_ddr_writer_v1_0/: xaxis_to_ddr_writer.h  xaxis_to_ddr_writer_linux.c
OVLinux/src/drivers/src/ddr_to_axis_reader_v1_0/: xddr_to_axis_reader.h  xddr_to_axis_reader_hw.h
OVLinux/src/drivers/src/gpio_v4_1/: xgpio.c  xgpio.h  xgpio_l.h  xgpio_linux.c
OVLinux/src/frameAccess/src/: getFrames.cpp  takeTime.cpp
(+4070 files in other folders)
